--- a/Angular/day03/day03/src/app/app.component.html
+++ b/Angular/day03/day03/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div class="p-5">
+<!-- <div class="p-5">
   <h1>App Component : {{ trackName }}</h1>
   <p class="lead mt-4 fw-bold text-danger">OrgName :{{ dataFromChild }}</p>
   <app-content (myEvent)="getData($event)" />
@@ -7,4 +7,6 @@
     [studentDetails]="student"
     [dataFromContent]="dataFromChild"
   />
-</div>
+</div> -->
+
+<app-products />
